<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="235dp"
            android:layout_height="184dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/game_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="70sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="startClick"
            android:text="@string/start" />

        <Button
            android:id="@+id/button3"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="scoreClick"
            android:text="@string/score" />

        <Button
            android:id="@+id/button4"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:onClick="rulesClick"
            android:layout_gravity="center"
            android:text="@string/keys" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="42dp"
                android:layout_height="fill_parent"
                android:src="@drawable/b1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="41dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:src="@drawable/b2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/b3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="64dp"
                android:layout_height="fill_parent"
                android:src="@drawable/b4" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="64dp"
                android:layout_height="fill_parent"
                android:src="@drawable/b5" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>